Added users login documentation.
