# src/main/java/com/tssi/pueblo_pelicula/dto/LoginResponseDTO.java
@@ -6,5 +6,9 @@ import lombok.Data;
 @Data
 @AllArgsConstructor
 public class LoginResponseDTO {
-    private String token;
+    private String accessToken;
+
+    private String tokenType;
+
+    private Integer expiresIn;
 }
